ui design changes

--- a/FEproblem1/src/app/finding-falcone/falcone-dashboard/falcone-dashboard.component.html
+++ b/FEproblem1/src/app/finding-falcone/falcone-dashboard/falcone-dashboard.component.html
@@ -6,7 +6,7 @@
 
   <mat-sidenav-content class="layout-content">
     
-  <div class="charts-wrapper">
+  <div class="wrapper">
     <mat-card class="info">
       <app-planets></app-planets>
     </mat-card>
