--- a/FEproblem1/src/app/finding-falcone/result/result.component.html
+++ b/FEproblem1/src/app/finding-falcone/result/result.component.html
@@ -14,11 +14,11 @@
           <h1 class="result-page__card-title">
             Success
           </h1>
-
+  
         
         <mat-card-content class="result-page__card-content" >
           <div >
-             <p class="result-page__card-sub-title">Success. Congratulations on Finding Falcone. King Shan is mighty pleased.</p>
+             <p class="result-page__card-sub-title">Congratulations on Finding Falcone. King Shan is mighty pleased.</p>
               <p class="result-page__card-sub-title-second">
                 Planet:	{{planetName}}
               </p>
@@ -39,6 +39,7 @@
           <h1  class="result-page__card-title">
             Failed
           </h1>
+  
 
         <mat-card-content class="result-page__card-content" >
           <div >
