--- a/FEproblem1/src/app/finding-falcone/falcone-dashboard/falcone-dashboard.component.scss
+++ b/FEproblem1/src/app/finding-falcone/falcone-dashboard/falcone-dashboard.component.scss
@@ -1,7 +1,7 @@
 @import 'src/app/styles/variables';
 @import "src/app/styles/colors";
 
-.charts-wrapper {
+.wrapper {
   display: flex;
   margin: 0 8px;
   margin-top: 20px;
