responsive issue fix

--- a/FEproblem1/src/app/app-footer/app-footer.component.scss
+++ b/FEproblem1/src/app/app-footer/app-footer.component.scss
@@ -3,6 +3,7 @@
 
 .footer {
   height: $footer-height;
+ background-color: $background-color;
   margin-top: 40px;
   width: $footer-width;
   display: flex;
