--- a/FEproblem1/src/app/finding-falcone/falcone-dashboard/falcone-dashboard.component.scss
+++ b/FEproblem1/src/app/finding-falcone/falcone-dashboard/falcone-dashboard.component.scss
@@ -9,14 +9,20 @@
   @media (max-width: $normal) {
     flex-wrap: wrap;
   }
+  
 }
 
 .form {
   width: 100%;
-
+   @media (max-width: $small) {
+  flex-wrap: wrap;
+  }
 }
 .info{
-  width:100%;
+  width: 100%;
+  @media (max-width: $small) {
+  flex-wrap: wrap;
+  }
 }
 
 
@@ -39,7 +45,7 @@
   margin-top: 64px;
 
   @media (max-width: $small) {
-    width: 100%;
+  flex-wrap: wrap;
   }
 
 }
