--- a/FEproblem1/src/app/finding-falcone/search/search.component.scss
+++ b/FEproblem1/src/app/finding-falcone/search/search.component.scss
@@ -8,9 +8,12 @@
 
  
   box-shadow: 0 3px 11px 0 $shadow-white, 0 3px 3px -2px $shadow-grey, 0 1px 8px 0 $shadow-dark-grey;
-   display: absolute;
-   flex-direction: column;
-
+  display: absolute;
+  flex-direction: column;
+    @media (max-width: $small) {
+    flex-wrap: wrap;
+  }
+   
     justify-content:space-between;
 
   &__header {
@@ -32,6 +35,9 @@
     flex-direction: column;
     justify-content: space-between;
     height: 75%;
+      @media (max-width: $small) {
+    flex-wrap: wrap;
+  }
 
     &-info {
       align-items: center;
@@ -49,6 +55,10 @@
 
       &-chart {
         margin-left: 16px;
+        @media (max-width: $small) {
+   flex-wrap: wrap;
+  }
+
       }
     }
 
@@ -111,23 +121,58 @@
 }
 
 .example-form{
-  width: 100%;
+ /* width: 100%;
     &__content {
       width:50%;
-    }
+    }*/
+     @media (max-width: $small) {
+    flex-wrap: wrap;
+   
+  }
 }
 
 .row {
   display: flex;
   flex-direction: row;
+    @media (max-width: $small) {
+    flex-wrap: wrap;
+  }
 }
 
 .col {
-  flex: 1;
-  margin-right: 20px;
+ // flex: 1;
+   
+    @media (max-width: $small) {
+    flex-wrap: wrap;
+  }
 }
 
 .col:last-child {
   margin-right: 0;
+}
+
+.shipping-card {
+  min-width: 120px;
+  margin: 20px auto;
+    @media (max-width: $normal) {
+    flex-wrap: wrap;
+  }
+
+  .example-radio-group {
+  //display: flex;
+  //flex-direction: column;
+  margin: 15px 0;
+    @media (max-width: $small) {
+    flex-wrap: wrap;
+  }
+}
+
+.example-radio-button {
+  margin: 5px;
+    @media (max-width: $small) {
+    flex-wrap: wrap;
+  }
+}
+
 }
 
