bug fixes and search unit test for destination1 and vehicle1 autocomplete

--- a/FEproblem1/src/app/finding-falcone/search/search.component.html
+++ b/FEproblem1/src/app/finding-falcone/search/search.component.html
@@ -77,6 +77,7 @@
          <mat-form-field class="full-width" >
             <mat-label>Destination 2</mat-label>
             <input #destination2 type="text"
+             id="planet2"
              placeholder="Pick one"
              aria-label="Destination 2"
              matInput
