--- a/FEproblem1/src/app/finding-falcone/result/result.component.html
+++ b/FEproblem1/src/app/finding-falcone/result/result.component.html
@@ -3,7 +3,7 @@
   <div class="result-page__content">
         <div class="result-page__title">
       
-  <h3 class="result-page__title-text">Finding Falcone</h3>
+ <!--  <h3 class="result-page__title-text">Finding Falcone</h3> -->
     </div>
   
   <mat-grid-list cols="2" >
