gh pages and css fixes

--- a/FEproblem1/src/app/app-header/app-header.component.html
+++ b/FEproblem1/src/app/app-header/app-header.component.html
@@ -11,8 +11,8 @@
   <button mat-flat-button class="user-button" routerLink="/">  
   <mat-icon class="user-button__icon" >home</mat-icon>Home</button>
 
-  <a class="user-button" mat-flat-button  href="https://www.geektrust.in/" target="_blank" >
-  Geektrust Home
+  <a class="user-button" mat-flat-button  href="https://www.geektrust.com/challenge/space" target="_blank" >
+    Problem Descriprion
  </a>
 
   </div>
