--- a/FEproblem1/src/app/finding-falcone/planets/planets.component.scss
+++ b/FEproblem1/src/app/finding-falcone/planets/planets.component.scss
@@ -78,3 +78,9 @@
   background-image: url('../../../assets/img/planetlogo.jpg');
   background-size: cover;
 }
+
+@media only screen and (max-width:1024px){
+  .example-card{
+    max-width: unset;
+  }
+}
